# sqlgen

./: CMakeLists.txt  README.md  conanfile.py  sqlgen-config.cmake.in  vcpkg.json
.github/workflows/: linux-cxx20-conan.yaml  linux-cxx20-vcpkg.yaml  linux-cxx20.yaml  linux-postgres-cxx20.yaml  linux-sqlite-cxx20.yaml  macos-cxx20-conan.yaml  macos-cxx20-vcpkg.yaml  macos-cxx20.yaml  macos-postgres-cxx20.yaml  macos-sqlite-cxx20.yaml  windows-cxx20-vcpkg.yaml  windows-cxx20.yaml  windows-postgres-cxx20.yaml  windows-sqlite-cxx20.yaml
docs/: README.md  col.md  connection_pool.md  create_index.md  defining_tables.md  delete_from.md  drop.md  group_by_and_aggregations.md  insert.md  joins.md  literals.md  mysql.md  other_operations.md  pattern.md  postgres.md  primary_key.md  reading.md  result.md  select_from.md  sqlite.md  to_sql.md  transactions.md  update.md  views.md  writing.md
include/: Connection.hpp  Iterator.hpp  sqlgen.hpp
include/dynamic/: Column.hpp  CreateTable.hpp  SelectFrom.hpp  Table.hpp  Type.hpp  select.hpp
include/parsing/: has_reflection_method.hpp  is_nullable.hpp
src/: sqlgen_postgres.cpp  sqlgen_sqlite.cpp
tests/: CMakeLists.txt  test_schema.cpp  test_tablename.cpp  test_to_create_table.cpp  test_to_insert.cpp  test_to_select_from.cpp
tests/mysql/: test_group_by.cpp  test_group_by_with_operations.cpp  test_join.cpp  test_joins_from.cpp  test_joins_nested.cpp  test_joins_nested_grouped.cpp  test_joins_two_tables.cpp  test_joins_two_tables_grouped.cpp  test_range.cpp  test_range_select_from.cpp  test_select_from_with_to.cpp
tests/postgres/: test_aggregations.cpp  test_aggregations_with_nullable.cpp  test_auto_incr_primary_key.cpp  test_create_index.cpp  test_create_index_dry.cpp  test_create_index_where.cpp  test_create_index_where_dry.cpp  test_create_table.cpp  test_create_table_dry.cpp  test_delete_from.cpp  test_delete_from_dry.cpp  test_drop_dry.cpp  test_enum_namespace.cpp  test_group_by.cpp  test_group_by_with_operations.cpp  test_insert_and_read.cpp  test_insert_and_read_two_tables.cpp  test_insert_dry.cpp  test_is_null.cpp  test_is_null_dry.cpp  test_join.cpp  test_joins_from.cpp  test_joins_nested.cpp  test_joins_nested_grouped.cpp  test_joins_two_tables.cpp  test_joins_two_tables_grouped.cpp  test_like.cpp  test_like_dry.cpp  test_limit.cpp  test_operations.cpp  test_operations_with_nullable.cpp  test_range.cpp  test_range_select_from.cpp  test_select_from_with_timestamps.cpp  test_select_from_with_to.cpp  test_timestamp.cpp  test_timestamp_with_tz.cpp  test_to_select_from.cpp  test_to_select_from2_dry.cpp  test_to_select_from_dry.cpp  (+11 more)
tests/sqlite/: test_aggregations.cpp  test_aggregations_with_nullable.cpp  test_alpha_numeric_query.cpp  test_auto_incr_primary_key.cpp  test_create_index.cpp  test_create_table.cpp  test_delete_from.cpp  test_drop.cpp  test_enum_namespace.cpp  test_group_by.cpp  test_group_by_with_operations.cpp  test_insert_and_read.cpp  test_insert_by_ref_and_read.cpp  test_is_null.cpp  test_join.cpp  test_joins_from.cpp  test_joins_nested.cpp  test_joins_nested_grouped.cpp  test_joins_two_tables.cpp  test_joins_two_tables_grouped.cpp  test_like.cpp  test_limit.cpp  test_operations.cpp  test_operations_with_nullable.cpp  test_order_by.cpp  test_range.cpp  test_range_select_from.cpp  test_range_select_from_with_to.cpp  test_select_from_with_timestamps.cpp  test_single_read.cpp  test_timestamp.cpp  test_to_create_table.cpp  test_to_insert.cpp  test_to_select_from.cpp  test_transaction.cpp  test_unique.cpp  test_update.cpp  test_where.cpp  test_where_with_nullable.cpp  test_where_with_nullable_operations.cpp  (+4 more)
(+132 files in other folders)
